@@ -1,3 +1,9 @@
+2007-03-19  Jeffrey Stedfast  <fejj@novell.com>
+
+	* MonoDevelop.Ide.Gui/TextEditor.cs (GetCharAt): Now that
+	ITextFile has GetCharAt(), use that instead of implementing it
+	ourselves.
+
 2007-03-14  Jeffrey Stedfast  <fejj@novell.com>
 
 	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs
